--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,12 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
-    ggplot2
+    AnnotationDbi,
+    dplyr,
+    ggplot2,
+    GO.db,
+    purrr,
+    stats,
+    utils
 Suggests: 
     testthat
