--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(determine_offspring_function)
 export(expand_terms)
 export(get_all_mappings)
 export(get_ancestor_go)
+export(get_ratio)
 export(parse_features)
 export(remove_dots)
 export(test_function)
