Add some filtering functions
These functions are used to filter NA (missing) values, or
zero values, or other specific values from data, using
regular expressions to select the data columns to use for
the filtering. They provide a lot more control over which rows are
removed than standard NA ratio filters for example.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(determine_ancestor_function)
 export(determine_offspring_function)
 export(expand_terms)
+export(filter_na)
+export(filter_val)
+export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
 export(get_ratio)
