Add match_id function
This function is used to match metadata in lookup tables to
string IDs, for example UniProt accessions. It is mainly used
where you have a data.frame column with IDs like
c("AAA111", "BBB222;CCC333") to get relevant metadata, e.g.
proteins names, and output it in the form
c("Protein A", "Protein B;Protein C").

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
 export(get_ratio)
+export(match_id)
+export(match_id_)
 export(parse_features)
 export(remove_dots)
 export(test_function)
