--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: camprotR
-Title: What the Package Does (One Line, Title Case)
+Title: Processing, analysing and visualising CCP proteomics data
 Version: 0.0.0.9000
 Authors@R: c(
     person(given = "Charlotte", family = "Dawson", role = c("aut", "cre"),
            email = "csdaw@outlook.com", comment = c(ORCID = "0000-0002-7151-5971")),
-    person(given = "Tom", family = "Smith", role = c("aut"),
-           email = "some@email.com", comment = c(ORCID = "ORCID_goes_here"))
+    person(given = "Tom", family = "Smith", role = c("aut", "cre"),
+           email = "tss38@cam.ac.uk", comment = c(ORCID = "0000-0002-0697-8777"))
     )
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
