adds plot for feature intensities per sample

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_ratio)
 export(match_id)
 export(match_id_)
 export(parse_features)
+export(plot_label_quant)
 export(remove_dots)
 export(test_function)
 import(dplyr)
