--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(filter_val)
 export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
+export(get_cat_palette)
 export(get_ratio)
 export(match_id)
 export(match_id_)
