adds function for camprot ggplot theme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(parse_features)
 export(plot_label_quant)
 export(remove_dots)
 export(test_function)
+export(theme_camprot)
 import(dplyr)
 import(ggplot2)
 importFrom(purrr,map2)
