--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(filter_val)
 export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
+export(get_cat_palette)
 export(get_ratio)
 export(match_id)
 export(match_id_)
@@ -15,6 +16,7 @@ export(parse_features)
 export(plot_label_quant)
 export(remove_dots)
 export(test_function)
+export(theme_camprot)
 import(dplyr)
 import(ggplot2)
 importFrom(purrr,map2)
