adds notch plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,14 @@ export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
 export(get_cat_palette)
+export(get_psm_metrics)
 export(get_ratio)
 export(match_id)
 export(match_id_)
 export(parse_features)
-export(plot_label_quant)
+export(plot_TMT_notch)
+export(plot_quant)
+export(removeX)
 export(remove_dots)
 export(test_function)
 export(theme_camprot)
