adds function for consistent pep->master protein across multiple lfq runs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
 export(get_cat_palette)
+export(get_parsimony_pep2prot)
 export(get_psm_metrics)
 export(get_ratio)
 export(match_id)
