--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,8 @@ export(match_id_)
 export(parse_features)
 export(plot_TMT_notch)
 export(plot_quant)
-export(removeX)
 export(remove_dots)
+export(remove_x)
 export(test_function)
 export(theme_camprot)
 import(dplyr)
