--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,11 @@ export(match_id_)
 export(parse_features)
 export(plot_TMT_notch)
 export(plot_quant)
+export(psm_to_peptide_style_modifications)
 export(remove_dots)
+export(remove_silac_modifications)
 export(remove_x)
+export(silac_psm_seq_int)
 export(test_function)
 export(theme_camprot)
 import(dplyr)
