Make R CMD check pass
There is still one note:
"unable to verify current time" which can be ignored.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,9 @@ export(theme_camprot)
 import(dplyr)
 import(ggplot2)
 import(tidyr)
+importFrom(MSnbase,exprs)
+importFrom(MSnbase,fData)
 importFrom(purrr,map2)
+importFrom(rlang,.data)
 importFrom(stats,setNames)
 importFrom(utils,head)
