--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,12 +16,17 @@ RoxygenNote: 7.1.1
 biocViews:
 Imports: 
     AnnotationDbi,
+    Biostrings,
     dplyr,
     tidyr,
     ggplot2,
     GO.db,
+    MSnbase,
     purrr,
+    rlang,
     stats,
+    stringr,
+    tibble,
     utils
 Suggests: 
     testthat
