Make R CMD check pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(theme_camprot)
 import(dplyr)
 import(ggplot2)
 import(tidyr)
+importFrom(Biobase,"exprs<-")
 importFrom(MSnbase,exprs)
 importFrom(MSnbase,fData)
 importFrom(purrr,map2)
