--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ r_packages:
   - testthat
   - covr
 
+script:
+ - Rscript -e "library(testthat); testthat::test_dir('tests/testthat', reporter = c('progress', 'fail'))"
+
 notifications:
   email:
     recipients: tss38@cam.ac.uk
