--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 biocViews:
+Depends: 
+    R (>= 2.10)
 Imports: 
     AnnotationDbi,
     Biobase,
