--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+VignetteBuilder: knitr
 biocViews:
 Depends: 
     R (>= 2.10)
@@ -33,4 +34,6 @@ Imports:
     tibble,
     utils
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
