adds tests for notch_per_protein & parse_features

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ import(tidyr)
 importFrom(Biobase,"exprs<-")
 importFrom(MSnbase,exprs)
 importFrom(MSnbase,fData)
+importFrom(grDevices,colorRampPalette)
 importFrom(purrr,map2)
 importFrom(rlang,.data)
 importFrom(stats,setNames)
