--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+VignetteBuilder: knitr
 biocViews:
 Depends: 
     R (>= 2.10)
@@ -28,8 +29,11 @@ Imports:
     purrr,
     rlang,
     stats,
+    Hmisc,
     stringr,
     tibble,
     utils
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
