--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_all_mappings)
 export(get_ancestor_go)
 export(get_cat_palette)
 export(get_incorporation)
+export(get_notch_per_protein)
 export(get_parsimony_pep2prot)
 export(get_psm_metrics)
 export(get_ratio)
@@ -24,7 +25,11 @@ export(match_id_)
 export(parse_PTM_scores)
 export(parse_features)
 export(plot_TMT_notch)
+export(plot_below_notch_per_prot)
+export(plot_fraction_below_notch_per_prot)
 export(plot_incorporation)
+export(plot_missing_SN)
+export(plot_missing_SN_per_sample)
 export(plot_quant)
 export(psm_to_peptide_style_modifications)
 export(remove_dots)
@@ -40,6 +45,7 @@ import(tidyr)
 importFrom(Biobase,"exprs<-")
 importFrom(MSnbase,exprs)
 importFrom(MSnbase,fData)
+importFrom(grDevices,colorRampPalette)
 importFrom(purrr,map2)
 importFrom(rlang,.data)
 importFrom(stats,setNames)
