adds functions to update ave. S/N, count features per protein & center-normalise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(add_PTM_positions)
 export(add_peptide_positions)
 export(add_site_sequence)
+export(center_normalise_to_ref)
+export(count_features_per_protein)
 export(determine_ancestor_function)
 export(determine_offspring_function)
 export(estimate_incorporation)
@@ -15,6 +17,7 @@ export(get_all_mappings)
 export(get_ancestor_go)
 export(get_cat_palette)
 export(get_incorporation)
+export(get_medians)
 export(get_notch_per_protein)
 export(get_parsimony_pep2prot)
 export(get_psm_metrics)
@@ -39,6 +42,7 @@ export(restrict_features_per_protein)
 export(silac_psm_seq_int)
 export(test_function)
 export(theme_camprot)
+export(update_average_sn)
 import(dplyr)
 import(ggplot2)
 import(tidyr)
@@ -48,5 +52,6 @@ importFrom(MSnbase,fData)
 importFrom(grDevices,colorRampPalette)
 importFrom(purrr,map2)
 importFrom(rlang,.data)
+importFrom(robustbase,colMedians)
 importFrom(stats,setNames)
 importFrom(utils,head)
