--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,13 +14,15 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
+Remotes: moodymudskipper/cutr
 biocViews:
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5.0)
 Imports: 
     AnnotationDbi,
     Biobase,
     Biostrings,
+    cutr,
     dplyr,
     tidyr,
     ggplot2,
@@ -28,13 +30,12 @@ Imports:
     MSnbase,
     purrr,
     rlang,
+    robustbase,
     stats,
-    Hmisc,
-    stringr,
     tibble,
-    utils,
-    robustbase
+    utils
 Suggests: 
-    testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    stringr,
+    testthat
