--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,6 @@ Imports:
     Biostrings,
     cutr,
     dplyr,
-    tidyr,
     ggplot2,
     GO.db,
     MSnbase,
@@ -33,8 +32,10 @@ Imports:
     robustbase,
     stats,
     tibble,
+    tidyr,
     utils
 Suggests: 
+    covr,
     knitr,
     rmarkdown,
     stringr,
