--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,14 @@
+comment: false
+
 coverage:
   status:
-    patch: off
+    project:
+      default:
+        target: auto
+        threshold: 1%
+        informational: true
+    patch:
+      default:
+        target: auto
+        threshold: 1%
+        informational: true
