--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,26 +14,28 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
+Remotes: moodymudskipper/cutr
 biocViews:
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5.0)
 Imports: 
     AnnotationDbi,
     Biobase,
     Biostrings,
+    cutr,
     dplyr,
-    tidyr,
     ggplot2,
     GO.db,
     MSnbase,
     purrr,
     rlang,
+    robustbase,
     stats,
-    Hmisc,
-    stringr,
     tibble,
+    tidyr,
     utils
 Suggests: 
-    testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    stringr,
+    testthat
