Add download_crap() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(add_PTM_positions)
 export(add_peptide_positions)
 export(add_site_sequence)
 export(center_normalise_to_ref)
+export(check_uniprot_release)
 export(count_features_per_protein)
 export(determine_ancestor_function)
 export(determine_offspring_function)
+export(download_crap)
 export(estimate_incorporation)
 export(expand_terms)
 export(filter_TMT_PSMs)
