Add sub_crap() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(remove_silac_modifications)
 export(remove_x)
 export(restrict_features_per_protein)
 export(silac_psm_seq_int)
+export(sub_crap)
 export(theme_camprot)
 export(update_average_sn)
 import(dplyr)
