Refactor download_ccp_crap()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,13 @@
 export(add_PTM_positions)
 export(add_peptide_positions)
 export(add_site_sequence)
+export(append_crap_fasta)
 export(center_normalise_to_ref)
+export(check_uniprot_release)
 export(count_features_per_protein)
 export(determine_ancestor_function)
 export(determine_offspring_function)
+export(download_ccp_crap)
 export(estimate_incorporation)
 export(expand_terms)
 export(filter_TMT_PSMs)
@@ -16,6 +19,7 @@ export(filter_zero)
 export(get_all_mappings)
 export(get_ancestor_go)
 export(get_cat_palette)
+export(get_ccp_crap)
 export(get_incorporation)
 export(get_medians)
 export(get_notch_per_protein)
@@ -23,6 +27,7 @@ export(get_parsimony_pep2prot)
 export(get_psm_metrics)
 export(get_ratio)
 export(get_sequence)
+export(make_crap_fasta)
 export(match_id)
 export(match_id_)
 export(parse_PTM_scores)
@@ -40,6 +45,7 @@ export(remove_silac_modifications)
 export(remove_x)
 export(restrict_features_per_protein)
 export(silac_psm_seq_int)
+export(sub_crap)
 export(theme_camprot)
 export(update_average_sn)
 import(dplyr)
