--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(get_parsimony_pep2prot)
 export(get_psm_metrics)
 export(get_ratio)
 export(get_sequence)
-export(make_crap_fasta)
+export(make_fasta)
 export(match_id)
 export(match_id_)
 export(parse_PTM_scores)
