--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(restrict_features_per_protein)
 export(silac_psm_seq_int)
 export(sub_crap)
 export(theme_camprot)
+export(theme_csd)
 export(update_average_sn)
 import(dplyr)
 import(ggplot2)
