Add more GO functions
Currently untested.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(count_features_per_protein)
 export(determine_ancestor_function)
 export(determine_offspring_function)
 export(download_ccp_crap)
+export(estimate_go_overrep)
 export(estimate_incorporation)
 export(expand_terms)
 export(filter_TMT_PSMs)
@@ -20,6 +21,7 @@ export(get_all_mappings)
 export(get_ancestor_go)
 export(get_cat_palette)
 export(get_ccp_crap)
+export(get_enriched_go)
 export(get_incorporation)
 export(get_medians)
 export(get_notch_per_protein)
