--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,5 +39,6 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
