adds msnset vignette to website (2)

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,6 @@ pkgdown_sha: ~
 articles:
   TMT_PSM_QC_Summarisation: TMT_PSM_QC_Summarisation.html
   crap: crap.html
-last_built: 2021-08-17T13:18Z
+  msnset: msnset.html
+last_built: 2021-09-20T15:30Z
 
