--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,6 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0),
     vdiffr (>= 1.0.0),
-    withr
+    withr,
     DEqMS
 Config/testthat/edition: 3
