Refactor and document `plot_go()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(parse_features)
 export(plot_TMT_notch)
 export(plot_below_notch_per_prot)
 export(plot_fraction_below_notch_per_prot)
+export(plot_go)
 export(plot_incorporation)
 export(plot_missing_SN)
 export(plot_missing_SN_per_sample)
