Ts add lfq vignette (#42)
* adds LFQ vignette

* finalises LFQ vignette to protein inference

* updates normalise to ref

* finalises first draft LFQ vignette

* resolve dependencies

* resolve dependencies(2)

* clarifies missing heatmap colours

* Query UniProt directly in LFQ vignette

UniProt.ws is not great. Now we just query the
UniProt REST API directly using the `httr` package.

Also other small changes to MSnSet construction
and other code in LFQ vignette.

* iq is back on CRAN: https://github.com/tvpham/iq/issues/2

* Finish CSD review of LFQ vignette

* Put back filter using pData

* Resolve some R CMD check notes

Co-authored-by: TomSmithCGAT <tss38@mrc-tox.cam.ac.uk>
Co-authored-by: Charlotte Dawson <csdaw@outlook.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
-Remotes: moodymudskipper/cutr
+Remotes: 
+    moodymudskipper/cutr
 biocViews:
 Depends: 
     R (>= 3.5.0)
@@ -39,10 +40,15 @@ Imports:
     tools,
     utils
 Suggests: 
+    biobroom,
+    DEqMS,
+    gplots,
     knitr,
+    iq,
+    limma,
+    naniar,
     rmarkdown,
     testthat (>= 3.0.0),
     vdiffr (>= 1.0.0),
-    withr,
-    DEqMS
+    withr
 Config/testthat/edition: 3
