Put back comma in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
 Remotes: 
-    moodymudskipper/cutr
+    moodymudskipper/cutr,
     csdaw/uniprotREST
 biocViews:
 Depends: 
