updates to enable support for triple SILAC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(get_medians)
 export(get_notch_per_protein)
 export(get_parsimony_pep2prot)
 export(get_psm_metrics)
+export(get_psm_silac_mod_regex)
 export(get_ratio)
 export(get_sequence)
 export(make_fasta)
